ocfl-java-itest/src/test/resources/invalid-repos/missing-inventory/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v1/inventory.json.sha512
ba9900bec04c79d9bc0b11667fb4c2895e9598332d0405ceab0b744bc23694f844c8222cddeb1a0f80e9696551ed3f094f014bd020d9683741a504e9512727cd  inventory.json
